version: "0.1.1~dune"
opam-version: "2.0"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: ["The qrc programmers"]
homepage: "https://github.com/jonahbeckford/qrc"
doc: "https://erratique.ch/software/qrc/doc"
license: "ISC"
dev-repo: "git+https://erratique.ch/repos/qrc.git"
bug-reports: "https://github.com/dbuenzli/qrc/issues"
tags: [ "qr-code" "codec" "org:erratique" ]
depends:
[
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.1"}
]
depopts: ["cmdliner"]
conflicts: [ "cmdliner" {< "1.0.4"} ]
build: [ "dune" "build" "-p" name "-j" jobs ]
dev-repo: "git+https://github.com/jonahbeckford/qrc.git"
url {
  src: "git://github.com/jonahbeckford/qrc.git#duniverse-v16.0.0"
}